fixed chmod -x in debian/rules killing execute perms on parsechangelog scripts

--- a/debian/rules
+++ b/debian/rules
@@ -94,7 +94,7 @@ binary-trees: build
 	ln -s ../man7/undocumented.7.gz debian/tmp-main/usr/share/man/man1/dpkg-divert.1.gz
 	gzip -9vf debian/tmp-main/usr/share/doc/dpkg/changelog*
 	cp debian/copyright debian/tmp-main/usr/share/doc/dpkg/copyright
-	chmod -x `find debian/tmp-{main,dev}/usr/lib -type f`
+	chmod -x debian/tmp-main/usr/lib/libdpkg.*
 	ln -s dpkg debian/tmp-dev/usr/share/doc/dpkg-dev
 	set -e; for f in \
  usr/share/doc/dpkg/{internals.html,changelog.manuals.gz} \
