* Fixed incorrect patch for --print-architecture (oops, oh well     it was already broken when there was no gcc anyway :)   * Fixed missing mipseb that was supposed to be in the archtable   * Better output in update-alternatives --config, now shows the     current, and the prefered choices.   * dpkg-name: ignore epoch when getting version   * 50dpkg-dev.el: add it as a conffile for dpkg-dev   * dpkg-shlibdeps: redirect STDERR to /dev/null for the dpkg fork so we     don't see dpkg's errors   * internals.sgml: Removed references to the versions of build tools,     they date the document.   * debian-changelog-mode.el: added hint for better log-email handling   * Added recognition for new source-depends fields for policy     referenced in bug #41232   * dpkg-buildpackage: add -ap option to force a pause prior to starting     the sign process. This helps for people who don't keep their signatures     on the filesystem (on a floppy perhaps, then mount as needed).   * minor script corrections   * dpkg-dev control: Change gcc to c-compiler in the recommends field, and     move cpio, patch and make to the depends line

--- a/debian/control
+++ b/debian/control
@@ -24,8 +24,8 @@ Package: dpkg-dev
 Section: devel
 Priority: important
 Architecture: all
-Depends: perl5
-Recommends: cpio (>= 2.4.2-2), patch (>= 2.2-1), gcc, make
+Depends: perl5, cpio (>= 2.4.2-2), patch (>= 2.2-1), make
+Recommends: c-compiler
 Suggests: gnupg, debian-keyring
 Conflicts: dpkgname
 Replaces: dpkgname, dpkg (<< 1.4.0), dpkg-doc-ja
