* debian/control: added dpkg-doc   * debian/dpkg-doc-{postinst,prerm}: new files for dpkg-doc package   * debian/dpkg-internals: doc-base support for dpkg-doc   * debian/rules: added build rules for dpkg-doc to binary-indep target   * doc/Makefile.am: changed build setup for internals.sgml to use the     debiandoc tools, and removed internals.* stuff from being built by     default. Two new targets, internals and internals-install, now handle     this   * doc/changelog: removed, duplicate of ChangeLog   * doc/internals.sgml: converted to debiandoc format, now builds correctly     and without errors   * doc/manuals-version: removed since it is generated at build time   * doc/texinfo.*: moved to doc/obsolete/ since the debiandoc format doesn't     need them   * main/filesdb.c: fixed compiler warning

--- a/debian/control
+++ b/debian/control
@@ -38,3 +38,13 @@ Description: Package building tools for Debian
  .
  Most Debian source packages will require additional tools to build -
  for example, most packages need the `make' and the C compiler `gcc'.
+
+Package: dpkg-doc
+Section: doc
+Priority: extra
+Architecture: all
+Description: Dpkg Internals Documentation
+ This document describes the internal operations of the dpkg program. It
+ covers building aswell as the internals functions. If you are interested
+ in creating your own packages, then you may be more interested in the
+ packaging-manual documentation package.
