Add gettext-support to dselect

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -41,3 +41,19 @@ split/queue.c
 split/split.c
 
 md5sum/md5sum.c
+
+dselect/basecmds.cc
+dselect/baselist.cc
+dselect/bindings.cc
+dselect/main.cc
+dselect/methlist.cc
+dselect/method.cc
+dselect/methparse.cc
+dselect/pkgcmds.cc
+dselect/pkgdepcon.cc
+dselect/pkgdisplay.cc
+dselect/pkginfo.cc
+dselect/pkglist.cc
+dselect/pkgsublist.cc
+dselect/pkgtop.cc
+
