Added Czech translation for dpkg

--- a/configure.in
+++ b/configure.in
@@ -90,7 +90,7 @@ AC_ARG_WITH(olddeb,
 
 dnl gettext
 
-ALL_LINGUAS="en fr es ja_JP.ujis"
+ALL_LINGUAS="cs en fr es ja_JP.ujis"
 AM_GNU_GETTEXT
 
 dnl Other stuff
