Small configure update

--- a/utils/configure.in
+++ b/utils/configure.in
@@ -5,6 +5,7 @@ AC_PREREQ([2.12])
 AC_INIT(start-stop-daemon.c)
 AM_CONFIG_HEADER(config.h)
 
+AC_CHECK_TOOL(CC, gcc)
 AC_PROG_CC
 AC_CANONICAL_SYSTEM
 AC_CHECK_TOOL_PREFIX
