Fix name for spanish translation

--- a/configure.in
+++ b/configure.in
@@ -91,7 +91,7 @@ AC_ARG_WITH(olddeb,
 
 dnl gettext
 
-ALL_LINGUAS="cs en es fr ja_JP.ujis po"
+ALL_LINGUAS="en es fr ja_JP.ujis pl"
 AM_GNU_GETTEXT
 
 dnl Other stuff
