--- a/debian/control
+++ b/debian/control
@@ -43,6 +43,7 @@ Package: dpkg-doc
 Section: doc
 Priority: extra
 Architecture: all
+Replaces: dpkg-dev (<<1.4.1.19)
 Description: Dpkg Internals Documentation
  This document describes the internal operations of the dpkg program. It
  covers building aswell as the internals functions. If you are interested
