--- a/debian/rules
+++ b/debian/rules
@@ -98,7 +98,7 @@ binary-trees: build
 	cp debian/copyright debian/tmp-main/usr/share/doc/dpkg/copyright
 	chmod -x debian/tmp-main/usr/lib/libdpkg.*
 	set -e; for f in \
- usr/share/doc/dpkg/{changelog.manuals.gz} \
+ usr/share/doc/dpkg/changelog.manuals.gz \
  usr/bin/dpkg-{source,genchanges,gencontrol,shlibdeps,buildpackage,parsechangelog} \
  usr/bin/{dpkg-distaddfile,822-date,dpkg-scanpackages,dpkg-scansources,dpkg-name,dpkg-architecture} \
  usr/share/man/{ja,.}/man1/dpkg-{source,genchanges,gencontrol,shlibdeps,buildpackage,architecture}.1.gz \
