--- a/configure.in
+++ b/configure.in
@@ -91,7 +91,7 @@ AC_ARG_WITH(olddeb,
 
 dnl gettext
 
-ALL_LINGUAS="en es fr ja_JP.ujis pl"
+ALL_LINGUAS="en es fr ja_JP.ujis pl ru"
 AM_GNU_GETTEXT
 
 dnl Other stuff
